# gekkofs-v0.9.2

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README.ucx.md  TESTED-SYSTEMS.md  build.sh  env.sh
CMake/: FindAGIOS.cmake  FindAIO.cmake  FindArgobots.cmake  FindBoost_preprocessor.cmake  FindDate.cmake  FindMargo.cmake  FindMercury.cmake  FindParallax.cmake  FindSnappy.cmake  FindSphinx.cmake  FindSyscall_intercept.cmake  FindZStd.cmake  gkfs-code-coverage.cmake  gkfs-options.cmake  gkfs-python-testing.cmake  gkfs-testing.cmake  gkfs-utils.cmake
deps-arm/: libmemcached.patch
deps-arm/argobots/: Makefile.in  aclocal.m4  configure~
deps-arm/libfabric/: Makefile.in  configure  configure~
deps-arm/margo/: Makefile.in  configure  margo-config.h.in~
deps-arm/ucx/: Makefile  Makefile.in  autogen.sh  config.h  config.log.bak  config.status  configure  libtool  tags  ucx.pc  ucx.spec  update_ucx.sh
deps-arm/ucx/src/uct/glex/: Makefile  Makefile.am  glex_ep.h  glex_iface.c  glex_md.c  glex_md.h
deps-arm/ucx/src/uct/glex/.deps/: libuct_glex_la-glex_channel.Plo  libuct_glex_la-glex_ep.Plo  libuct_glex_la-glex_iface.Plo  libuct_glex_la-glex_md.Plo
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt
docs/sphinx/: CMakeLists.txt  conf.py.in
examples/gfind/: gfind.cpp  pfind.sh  sfind.cpp
include/: config.hpp
include/client/: env.hpp  logging.hpp  open_file_map.hpp  preload_context.hpp  preload_util.hpp
include/common/: common_defs.hpp  metadata.hpp
scripts/: benchmark_check.sh  check_format.sh  clean_up_compiled_deps.sh  compile_dep.sh  dl_dep.sh  enter_merge_view.sh  enter_normal_view.sh  enter_normal_view_wo_registry.sh  gkfs_dep.sh  registry_demo.sh
scripts/ci/: trim_build_artifacts.sh
scripts/patches/: syscall_intercept.patch.arm64
scripts/profiles/: sources.list
scripts/yh-run/: check-status.sh  clush.conf  gkfs_hosts.txt  init-group.sh  kill-ior.sh  kill_del.sh  prepare-group.sh  prepare.sh  restart-group.sh  restart.sh  run-ior-test.sh  start-daemon-group.sh  start-daemon-registry-aware.sh  start-daemon.sh  stepd.preload.sh
src/: CMakeLists.txt
src/client/: gkfs_functions.cpp  logging.cpp  preload.cpp  preload_context.cpp  preload_util.cpp
src/common/: metadata.cpp
src/daemon/: daemon.cpp
src/registry/: CMakeLists.txt  my-rpc.cpp  server.cpp
src/staging/: .gitignore  CMakeLists.txt  Makefile  autorun.sh  clush.conf  config.yaml  go.mod  go.sum  main.go
src/staging/src/: stage-in.cpp  stage-out.cpp
src/staging/test/: test1
test/: CMakeLists.txt  IO_test.cpp  dir_test.cpp  lseek.cpp  main.cpp  main_IO_testing.cpp  main_MPI.cpp  main_temp.cpp  symlink_test.cpp  truncate.cpp  wr_test.cpp
tests/: CMakeLists.txt
tests/integration/: conftest.py  (+2 more)
(+566 files in other folders)
